--- a/assets/www/css/index.css
+++ b/assets/www/css/index.css
@@ -177,7 +177,7 @@ input[type=button].tab-button{margin:0 40px 0 40px;padding:15px 30px;background:
 .rcap .cyz{font-size:14px;line-height:20px;color:#808080;font-weight:bold;text-align:left;}
 .rcap .cyzxm{font-size:14px;color:#03a9f4;line-height:30px;text-align:left;}
 
-.dj{color:#6e94c9;font-weight:bold;display:block;text-align:center;}
+.dj{color:#6e94c9;font-weight:bold;display:block;text-align:center;display:none;}
 .score{display:none;}
 .pf{color:#fff;font-size:25px;line-height:25px;font-weight:bold;display:block;text-align:center;}
 
