[mod]进件流程修改

--- a/assets/www/css/index.css
+++ b/assets/www/css/index.css
@@ -1,4 +1,4 @@
-*{margin:0;padding:0;font-size:18px;}
+*{margin:0;padding:0;font-size:18px;font-famliy:微软雅黑;}
 html, body {   height: 100%; }
 /*form*/
 input[type=text],select,input[type=date],input[type=time],textarea{width:200px;padding:5px 0;margin:0 10px;border:1px solid #d1d7e6;border-radius:0.5em;}
@@ -35,13 +35,18 @@ p.Left{text-align:left;}
 .top img{width:100%;height:63px;}
 .top .Right{position:fixed;top:8px;right:10px;width:45px;height:45px;}
 .bottom{position:fixed;bottom:0;width:100%;text-align:right;margin-bottom:-5px;}
+
+.box{width:9em;height:9em;border-radius:1em;float:left;margin-left:1em;margin-top:1em;margin-bottom:1em;text-align:center;}
+.box img{width:5em;height:5em;margin-top:1em;margin-bottom:0.5em;}
+.box span{display:block;line-height:1em;width:9em;background:none;margin-top:0;}
 /*<!--导航-->*/
 .left{position:fixed;top:63px;left:-13em;bottom:0;width:13em;background:#e7e7eb;z-index:99;}
 .left .nav{height:100%;float:left;border-right: 2px solid #3b78c3;}
-.left .nav li{display:block;list-style:none;padding:0.72em 0;background:#009fe7;width:13em;text-align:center;border-bottom:0.1em solid #ecf3f7;}
+.left .nav li{display:block;list-style:none;padding:0.9em 0;background:#009fe7;width:13em;text-align:center;border-bottom:0.1em solid #ecf3f7;}
 .left .nav li span{display:block;color:#858fa6;}
-.left .nav .user{width:8em;height:8em;border-radius:10em;}
-.nav li p{background:#117ec1;color:#86cdf5;padding:15px;margin-top:5px;font-size:15px;}
+.left .nav .user{width:7.8em;height:7.8em;border-radius:10em;}
+.nav li p{background:#117ec1;color:#86cdf5;padding:10px;margin-top:5px;font-size:15px;}
+.nav li img{width:35px;}
 .hidebt{position:absolute;left:13em;width:20px;height:75px;border-radius:0 25px 25px 0;background:-webkit-gradient(linear,0 0,100% 0,from(#4583cf),to(#3567a3));;margin-top:18em;}
 
 /*<!--主页面-->*/
@@ -61,12 +66,12 @@ p.Left{text-align:left;}
 .ListTb .box5{background:#0e86b0;}
 
 /*<!--标题-->*/
-.title{position:fixed;z-index:20;top:63px;width:100%;padding-left:30px;background:#0bb8ce;color:#fff;font-size:20px;font-weight:bold;line-height:63px;}
+.title{position:fixed;z-index:20;top:63px;width:100%;padding-left:30px;background:-webkit-gradient(linear,0 0,100% 0,from(#32c5d2),to(#1fa5b1));;color:#fff;font-size:20px;font-weight:bold;line-height:63px;}
 .content{margin-top:136px;padding-bottom:50px;}
 .title img{vertical-align:middle;margin-right:10px;}
 .title .Right{position:fixed;top:96px;right:10px;}
 /*<!--搜索-->*/
-.title input[type=text]{width:285px;padding:5px 0 5px 15px;margin:0 10px;background:#eef1f8;background-image:url(../images/search.png);background-repeat:no-repeat;background-position:center right;border:1px solid #d1d7e6;border-radius:1em;}
+.title input[type=text]{width:300px;padding:5px 0 5px 15px;margin:0 10px;background:#eef1f8;background-image:url(../images/search.png);background-repeat:no-repeat;background-position:center right;border:1px solid #d1d7e6;border-radius:1em;}
 .title input[type=text]:focus{background:#fff;}
 
 /*<!--产品管理列表-->*/
@@ -90,6 +95,7 @@ p.Left{text-align:left;}
 /*.cpTable tr:nth-child(2n+1){background:#eeeeee;}*/
 .cpTable tr td,.cpTable tr th{padding:10px;border:1px solid #a5c1e5;}
 .cpTable input[type=button]{margin:5px 10px;}
+.cpTable .info{color:#0088cc}
 .no-border{width:70%;background:none;margin-left:2.5%;}
 .no-border tr td{border:none;color:gray;}
 .no-border label{color:#000;}
@@ -116,7 +122,16 @@ p.Left{text-align:left;}
 .llTable2 tr th{background:#008fbb;}
 .llTable2 tr:nth-child(2n+1){background:#99e1f7;}
 
+/*<!--众包管理-->*/
+.zbgl{background:#a4dfd1;border-radius:250px;}
+/*<!--拒绝进件弹出框-->*/
+.sdhtz .dialog-head .jjjj{width:auto;padding:0 1em;margin:0;border-right:1px solid #57c5f7;}
+
 /*<!--进件管理-->*/
+
+.jjgl1{width:200px;height:230px;}
+.jjgl1 img{width:170px;height:200px;}
+.jjgl1 span{width:200px;color:gray;}
 .jjgl{background:-webkit-gradient(linear,0 0,0 100%,from(#cbaeee),to(#5c63b4));width:10em;height:10em;margin-top:100px;}
 .jjgl img{width:5em;height:5em;margin-top:30px;}
 .jjgl span{color:#fff;width:10em;}
@@ -135,10 +150,13 @@ input[type=button].next{float:right;margin:15px 40px 0 0;}
 .images{margin:5px;float:left;display:inline-block;}
 .images img{width:350px;height:350px;}
 
+a.cz{text-decoration:underline;color:#0088cc;}
+.dialog-content .khjl{display:inline-block;width:20%;}
+
+.treeBox{width:25%;height:33.5em;display:inline-block;float:left;overflow:auto;background:#f0f6e4;border:1px solid #617775;margin-left:3%;}
+.jjsl tr td{width:16.6%;background:#7a867f;border:none;color:#fff;}
 /*<!--客户管理-->*/
-.box{width:9em;height:9em;border-radius:1em;float:left;margin-left:1em;margin-top:1em;margin-bottom:1em;text-align:center;}
-.box img{width:5em;height:5em;margin-top:1em;margin-bottom:0.5em;}
-.box span{display:block;line-height:1em;width:9em;background:none;margin-top:0;}
+
 
 .content p{line-height:60px;text-align:center;}
 .content .Left{text-align:left;margin-left:2.5%;}
@@ -146,15 +164,16 @@ input[type=button].tab-button{margin:0 40px 0 40px;padding:15px 30px;background:
 
 /*<!--我的首页-->*/
 .map{background:#ddd;width:100%;height:25em;}
-.line{position:fixed;top:215px;z-index:15;clear:both;background:-webkit-gradient(linear,0 0,100% 0,from(#fdf300),to(#fb7600));width:95%;margin-left:2.5%;height:2px;}
+.myline{position:fixed;top:215px;z-index:15;clear:both;background:-webkit-gradient(linear,0 0,100% 0,from(#fdf300),to(#fb7600));width:95%;margin-left:2.5%;height:2px;}
 
 .wdsy1{width:200px;height:269px;background:url(../images/11.png) no-repeat;}
 .wdsy2{width:200px;height:269px;background:url(../images/22.png) no-repeat;}
 .wdsy3{width:200px;height:269px;background:url(../images/33.png) no-repeat;}
 .wdsy4{width:200px;height:269px;background:url(../images/44.png) no-repeat;}
 .wdsy5{width:200px;height:269px;background:url(../images/55.png) no-repeat;}
-.wdsy1 img,.wdsy2 img,.wdsy3 img,.wdsy4 img,.wdsy5 img{margin-top:70px;width:90px;height:90px;}
-.wdsy1 span,.wdsy2 span,.wdsy3 span,.wdsy4 span,.wdsy5 span{margin-top:60px;color:gray;font-size:20px;width:200px;text-align:center;font-weight:bold;}
+.wdsy6{width:200px;height:269px;background:url(../images/66.png) no-repeat;}
+.wdsy1 img,.wdsy2 img,.wdsy3 img,.wdsy4 img,.wdsy5 img,.wdsy6 img{margin-top:70px;width:90px;height:90px;}
+.wdsy1 span,.wdsy2 span,.wdsy3 span,.wdsy4 span,.wdsy5 span,.wdsy6 span{margin-top:60px;color:gray;font-size:20px;width:200px;text-align:center;font-weight:bold;}
 .user-info{box-shadow:5px 5px 5px #dddddd;margin-top:50px;width:370px;padding-bottom:50px;float:left;margin-left:2.5%;margin-right:20px;background:#e8e8e8 url(../images/bqbj.png) no-repeat right bottom;border-radius:10px;}
 .user-info img{position:relative;top:-19px;left:142px;}
 .user-info .h2{color:#01b3c6;font-size:25px;font-weight:bold;text-align:center;padding-left:0px;margin-top:-20px;margin-bottom:20px;}
@@ -207,7 +226,8 @@ input[type=button].tab-button{margin:0 40px 0 40px;padding:15px 30px;background:
 /*<!--审核审批-->*/
 .shsp1{width:215px;height:215px;background:url(../images/cysdrw.jpg) no-repeat;margin-left:40px;}
 .shsp2{width:215px;height:215px;background:url(../images/shspjj.jpg) no-repeat;margin-left:40px;}
-.shsp1 span,.shsp2 span{width:215px;margin-top:225px;color:gray;}
+.shsp3{width:215px;height:215px;background:url(../images/wdzb.png) no-repeat;margin-left:40px;}
+.shsp1 span,.shsp2 span,.shsp3 span{width:215px;margin-top:225px;color:gray;}
 .khjbxx{margin-top:-20px;}
 .khjbxx span{color:#0088cc;}
 .khjbxx .radio{width:auto;}
@@ -226,7 +246,7 @@ input[type=button]{margin:0 10px;}
 .display-div{position:absolute;left:25%;margin-top:250px;background:white;width:50%;overflow:auto;z-index:9999;border-radius:10px;}
 .dialog-head{border-bottom:1px solid #eee;padding:10px;}
 .dialog-head h4{color:#808080;font-size:20px;line-height:40px;font-weight:bold;}
-.dialog-content{color:#333;line-height:40px;padding:20px;}
+.dialog-content{color:#333;line-height:40px;padding:20px;max-height:230px;overflow:auto;}
 .dialog-bottom{background:#f5f5f5;border-top:1px solid #ddd;text-align:center;border-radius:0 0 10px 10px;}
 .dialog-bottom button{width:70px;}
 /*<!--dialog审贷会通知-->*/
@@ -245,7 +265,7 @@ input[type=button]{margin:0 10px;}
 button.my-btn {padding:0 2px 3px 0;width:40px;margin:0 5px 5px 5px;}
 .my-btn img{width:25px;height:25px;}
 
-input[type=radio]{display:none;}
+input[type=radio],input[type=checkbox]{display:none;}
 .radio{display:inline-block;width:25px;height:25px;background:url(../images/radio.png) no-repeat;margin-top:5px;}
 .radio_checked{background:url(../images/radio_checked.png) no-repeat;}
 .checkbox{display:inline-block;height:25px;background:url(../images/checkbox.png) no-repeat;padding-left:25px;}
